--- a/teams-u12m-match-report.html
+++ b/teams-u12m-match-report.html
@@ -2,6 +2,7 @@
   jQuery(document).ready(function () {
     if (window.location.search.includes('id=r02')) jQuery('#r02').show();
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
+    else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -39,6 +40,20 @@
     skills, stick together. Noah playing his second game of football was great. Kai had a good game also and Grace had her best game. Will has put together 2
     good games, but what has impressed me with Will has been his on field communication to his teammates.
   </p>
+</div>
+<div id="r07" style="display: none">
+  <h3>Round 7</h3>
+  <p>
+    Our first quarter was much better this week, we were hungry for the contest the rain set in and made ball handling difficult. We were level at quarter time
+    2 points a piece, in the 2nd quarter we got stopped in our tracks, too many players at the contest and not playing on their opponent which resulted in
+    Coldstream kicking 3 goals to our nothing. We play on our opponent and not go chasing kicks. The 3rd quarter was like the &nbsp;2nd quarter with Coldstream
+    kicking 2 goals to nil, we were trying hard but kept turning the ball over. The last quarter was a complete turn around from the last 2 quarters our hunger
+    for the footy was outstanding the ball spent most of the quarter in our forward line, brought on by fantastic pressure we finally got rewarded with a goal
+    to Markus which was a great reward for the players and supporters, we scored 1-4 to nothing.we must play 4 quarters of football, well done to all of the
+    players.
+  </p>
+  <p>Liam played a great game, his best for us.</p>
+  <p>Birthday boy Markus played his best game for the season, Hayden also played his best game.</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
