--- a/teams-u12m.html
+++ b/teams-u12m.html
@@ -54,5 +54,6 @@
   <ul>
     <li><a href="/u12m-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
     <li><a href="/u12m-match-report/?id=r06" rel="nofollow">Round 6 Match Report</a></li>
+    <li><a href="/u12m-match-report/?id=r07" rel="nofollow">Round 7 Match Report</a></li>
   </ul>
 </div>
