--- a/teams-u13b-match-report.html
+++ b/teams-u13b-match-report.html
@@ -5,6 +5,7 @@
     else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
     else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
+    else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -146,6 +147,10 @@
   </p>
   <p>Well done to the boys on a great win.</p>
   <p>P.S the ladder is up, the game against Croydon South didn't count as they were relegated after round 2, so we are sitting on 2 wins &amp; 2 losses.</p>
+</div>
+<div id="r06" style="display: none">
+  <h3>Round 6</h3>
+  <p>This round was a BYE</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
