--- a/teams-u14g-match-report.html
+++ b/teams-u14g-match-report.html
@@ -6,6 +6,7 @@
     else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
+    else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -189,6 +190,61 @@
     We will work on picking up players, contesting marks and our hard ball gets will need to improve. We will also need to learn to reset quickly at stoppages
     and neutralise the opposition overlapping runs. Skills we can work on. The camaraderie, and the way the girls respect and have each other's back cannot be
     established in training drills. They just have it.
+  </p>
+</div>
+<div id="r07" style="display: none">
+  <h3>Round 7</h3>
+  <p>
+    In contrast to the last few games, today was a cold and rainy afternoon which saw Kyra lead the team out as captain. Pre-game we spoke about what the
+    expectations were and what we needed to work on:
+  </p>
+  <p>&middot; Picking up your player</p>
+  <p>&middot; Contest marks, not giving away easy possessions</p>
+  <p>&middot; Running back from midfield to help the backline</p>
+  <p>
+    We recognised that we were up against a team with a similar number of players and having the same niggling injuries that we have. They also have a similar
+    standing in the ladder to us. This was going to be an evenly contested game. We spoke about how this was going to be a tough game given the conditions.
+  </p>
+  <p>The opening quarter saw only one point kicked, a clear indication of how much of a tough game this was going to be.</p>
+  <p>
+    In the second quarter, with a near-full squad, and with a bench, we were able to capitalise on being able to rotate players. We went into the long break
+    with a 13-point lead.
+  </p>
+  <p>
+    We recognised that they would throw everything at us in the third quarter. And they sure did! They started off with two quick goals and threatened to derail
+    our game. Again, we were able to use our rotation and scored a timely goal that steadied the ship and stopped their push. We managed to end the quarter with
+    a 7-point lead.
+  </p>
+  <p>
+    Going into the final quarter, we knew that they would again try and throw everything at us, so we prepared by bolstering up our backline with some of our
+    proven performers. Ella, Leah, and Lexie took to the backline with Kyra in her role stopping the charge up the middle. Our midfielders knew they would be
+    called on to race back to assist the defenders as East Ringwood pressed forward. Shayla, Pippa and Ruby did great in running back to help the defenders.
+    Gemma and Gypsy roved with determination assisting our rucks out in the middle. Clara and Jess, again rotating into different on-ball positions around the
+    square, did a great job, both feeding the forward line and racing back to help the defence. Fenix and Ava again teaming up well to get us into the attack.
+    This last quarter was another arm-wrestle with every possession being a hard ball get. Fortunately, we were able to score a goal and get some breathing
+    room. East Ringwood, to their credit, kept coming at us, but our girls stood up to the challenge and came away with a hard-earned 13-point victory. The
+    final score was not a true indication of how close these two teams matched up.
+  </p>
+  <p>
+    Tori made her debut for the club and had an awesome first hit out. After a tentative start, she soon found herself in the thick of the action and fearlessly
+    crashed through the pack to put the team into attack. Tori has made an impression with the team, and we are encouraged by her enthusiasm and enjoyment of
+    the game.
+  </p>
+  <p>
+    Matilda made her comeback, joining the line-up for the first time this season, with immediate impact. She too found herself in the action stringing some
+    great passes and helping the forwards to keep the scoreboard ticking over.
+  </p>
+  <p>
+    Lily, still nursing an injury, was not able to join in the ruck and took another hit to the shoulder taking her out of the game for a spell. With Lexie
+    taking a knock to the leg, Raelene was asked to step up to the rucking role and was inspirational in her effort.
+  </p>
+  <p>
+    Last but not least, our runner, Nick covered so much ground today, often running out to move players around only to be sent out again to make some more
+    changes as soon as he got back to the bench. We acknowledge and appreciate his efforts.
+  </p>
+  <p>
+    This squad has a never say die attitude, respect for each other and has each other&rsquo;s back. This was truly a team effort and the way the girls came
+    together as a team today was memorable.
   </p>
 </div>
 <div id="not-found" style="display: none">
