--- a/teams-u16g-match-report.html
+++ b/teams-u16g-match-report.html
@@ -6,6 +6,7 @@
     else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
+    else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -119,6 +120,29 @@
   <p>Score 17 &ndash; 14</p>
   <p>Goals. Shaylee 2</p>
   <p>Best. Keely, Ella, Milly, Shaylee, Jade, Haylee, Tiarnah,Chloe.</p>
+</div>
+<div id="r07" style="display: none">
+  <h3>Round 7</h3>
+  <p>
+    ​Today we played Boronia at their home ground. Last time we played them we had a very close game so I was expecting another close one. It was a wet wintery
+    day so just hoping it wasn&rsquo;t going to rain too much when we played.
+  </p>
+  <p>
+    Boronia got off to a better start than us. Their want and desire to get the ball was at a higher level than ours so they were winning the ball more often
+    than us. We weren&rsquo;t manning up enough so Boronia were taking advantage of their loose players. Although we weren&rsquo;t down by much at quarter time,
+    we definitely had less of the ball. It was a similar result in the second quarter. Through our lack of talk, we lacked confidence to get the ball so once
+    again, we were having to tackle the opposition rather than getting the ball ourselves and kicking it our way.
+  </p>
+  <p>
+    After a chat at half time, I was hoping to turn things around but that didn&rsquo;t happen. Unfortunately &nbsp;that didn&rsquo;t happen so the backline had
+    their work cut out for them.
+  </p>
+  <p>
+    In the last quarter, Boronia scored a couple of quick goals so it was looking like it might blow out a bit but credit to the girls, they dug deep and we
+    were able to kick a couple of goals to narrow the lead. Unfortunately, they were just too strong for us and we went down 41-18.
+  </p>
+  <p>Goals. Haylee 2, Shaylee.</p>
+  <p>Best. Milly, Chloe, Haylee, Ella, Keely, Tiarnah, Jade, Shelby, Shaylee</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
