--- a/teams-u09m-match-report.html
+++ b/teams-u09m-match-report.html
@@ -5,6 +5,8 @@
     else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
     else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
+    else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
+    else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -142,6 +144,45 @@
     our team's enjoyment and success.
   </p>
   <p>We look forward to seeing everyone back on the track again this Friday as we continue to work hard and strive for improvement.</p>
+</div>
+<div id="r06" style="display: none">
+  <h3>Round 6</h3>
+  <p>
+    Our Kid's v Mothers Clash during Friday night footy training was great fun, and fortunately, all the kids survived despite some intense white line fever
+    from the moms!&nbsp;
+  </p>
+  <p>
+    Our mini match during the Bayswater Senior game was a great success. It was awesome to see all the kids take the field in the Baysie colors, proudly
+    representing the club.
+  </p>
+  <p>
+    The last two rounds have been packed with highlights. Xavier, Lewis, and Lennox pulled off some awesome marks. Phoenix and Billy continue to showcase their
+    exceptional pace, consistently taking on the field with determination.
+  </p>
+  <p>Johnny, Max, Patrick, and Logan demonstrated fantastic resolve and effort which we will continue to encourage and recognise.</p>
+</div>
+<div id="r07" style="display: none">
+  <h3>Round 7</h3>
+  <p>
+    We enjoyed our first club function of the year, with many parents joining us for the trivia night last Saturday. The hilarious costumes set the scene for a
+    fun night and made for some great laughs.
+  </p>
+  <p>
+    We were excited to welcome Archer and Cherish for their first game in Round 7. They slotted into the team seamlessly and are already making significant
+    contributions. It's great to see new faces bringing fresh energy to the team.
+  </p>
+  <p>
+    Over the past few weeks, we've introduced a few new focus areas that you might have noticed during the games. We've been coaching the team on switching the
+    ball and getting front and centre in marking contests. The kids are embracing these concepts enthusiastically, and we love seeing them apply these
+    strategies on Sundays.
+  </p>
+  <p>
+    These will continue as a theme over the coming weeks as well as ramping up our focus on fostering encouragement and celebration of their teammate&rsquo;s
+    successes, at training and on Sundays. We are lucky to have such an awesome young team and we are committed to making their footy experience as fun and
+    engaging as possible 😊
+  </p>
+  <p>Thank you to all our team officials and parent helpers for your ongoing support. Let's keep the momentum going and continue to build on our progress.</p>
+  <p>See you all back on the track this Friday!</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
