--- a/teams-u13b-match-report.html
+++ b/teams-u13b-match-report.html
@@ -6,6 +6,7 @@
     else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
+    else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -151,6 +152,40 @@
 <div id="r06" style="display: none">
   <h3>Round 6</h3>
   <p>This round was a BYE</p>
+</div>
+<div id="r07" style="display: none">
+  <h3>Round 7</h3>
+  <p>
+    Hi Baysie family,<br />&nbsp;<br />Today was a great day for footy, coming off a bye, we played the Basin on their home patch. After such a big win last
+    time against them, we told the boys to be prepared for anything and they were.&nbsp;<br />We asked the boys to get 4 goals in the first quarter and they
+    did, we went big in the middle of the ground and it proved to work today even in wet weather footy. Dusty kicked all 4 goals in the first quarter with some
+    beautiful delivery to him, mixed in with sheer determination and wanting the footy. As I said to Dusty today from a coaching point of view, his effort and
+    team play was 100%.&nbsp;
+  </p>
+  <p>
+    Moving the magnets round a bit in the 2nd quarter, proved as a team, we play Bayswater football best. On a wet and cold day the 2nd quarter proved to be a
+    bit tougher, the Basin came out hard and the footy became quite scrappy. Then the boys dug deep and played Bayswater footy, again delivering the ball to
+    Lachy was on point, he secured us all 3 goals in the second. I asked the boys to get me another 4 goals. We kicked 3 .4, which was great to see in such
+    trying conditions.&nbsp;
+  </p>
+  <p>
+    Going into the 3rd quarter 7 goals up, we told the boys to have fun, swapped most of the backs to forward, and played some players way out of their regular
+    position. I am loving the mix and flow that the boys have developed over this year! Kirby in the ruck most of the day was great to see. The 3rd quarter
+    proved that our boys are just gelling together, Ayden, Xane, competed very well. Ayden in particular, you got your 1 tackle and 1 shepherd that I asked you
+    for at the start of the game. It's the little goals we set each week guys, that can make a big difference. Everybody is really starting to chip in and be
+    part of our team. This is very important to see, especially from a coaches point of view. Charley, and Maison contributed with a cheeky goal on the board,
+    making it a 5 goal quarter.&nbsp;
+  </p>
+  <p>
+    In the last quarter we really played with the magnets, putting Seth into full forward, Phoenix into CHF. Nolan and Ayden onto the ball. Boys, I know that we
+    really threw you out of your comfort zone, but it was great to watch, your confidence is just growing more and more each week. We retired Dusty to full
+    back, after a 6 goal haul. Lachy copped a hard tackle and was done for the day mid way through the last (he's ok ) we thought we'd play it more cautiously,
+    with such a lead. Phoenix got himself a couple of goals also.&nbsp;
+  </p>
+  <p>
+    We as coaches only ask for you boys to compete and today we had 18 competitors on the ground. Can't ask for any more than that. All and all when you boys
+    are switched on and playing beautiful football you are very hard to beat. We love watching this team grow so much this year, keep it up lads!&nbsp;
+  </p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
