--- a/teams-u15b-match-report.html
+++ b/teams-u15b-match-report.html
@@ -6,6 +6,7 @@
     else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
+    else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -103,6 +104,23 @@
     points.&nbsp;
   </p>
   <p>Well done on getting the win boys, very well deserved.&nbsp;</p>
+</div>
+<div id="r07" style="display: none">
+  <h3>Round 7</h3>
+  <p>
+    After a singing happy birthday to our Junior Club President Beccy, the boys were up and about and ready to get a second win on the trot. After a tough first
+    quarter where both teams battled in the wet conditions, it was Lysterfield who went into the first break to be leading by four points. In the second
+    quarter, I thought we controlled the game and used our bigger bodies to out muscle Lysterfield. We went in with a game plan to move the ball forward at all
+    costs quickly. I thought that we were getting tackled too much because we weren't executing the plan as we discussed prior to the game starting. We went
+    into the major break, up by three points.&nbsp;
+  </p>
+  <p>
+    During the half time break I suggested to the boys if we tidy a couple small things up that we will run away with the game. This included playing closer to
+    our man and getting rid of the ball as quickly as possible. During the third quarter, the boys responded really well by kicking three goals and keeping
+    Lysterfield scoreless. In the final the boys continued to run hard and work really well for each other. Despite the very average conditions, we linked up
+    well and ran out the game to win by 26 points.
+  </p>
+  <p>Better players- Jordan Porter, Mason Finch, Jacob Green, Xavier Bickers, Brodie Talia and Blake Sales.</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
