--- a/teams-u11m-match-report.html
+++ b/teams-u11m-match-report.html
@@ -6,6 +6,7 @@
     else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
+    else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -177,6 +178,32 @@
     game.
   </p>
   <p>It was great to sing the song as a team again, that&rsquo;s three in a row, let&rsquo;s keep working as a team and keep our winning streak alive.</p>
+  <p>Go Baysie!</p>
+</div>
+<div id="r07" style="display: none">
+  <h3>Round 7</h3>
+  <p>Woohoo! 4 in a row!</p>
+  <p>
+    We&rsquo;ve really started to control games and play how we want to play. This was particularly evident in our round 7 game against Beaconsfield. Led out by
+    Anmar as captain, we played them for the second time this season, we knew they were a tough opponent and on a pretty wet day, with drizzle throughout the
+    game, there was a risk the weather could even the teams out.
+  </p>
+  <p>
+    Not to be however, with us coming away with another convincing win. Gordon and I were absolutely thrilled in the manner in which our kids played the game.
+    Whilst being challenged by our opposition, who weren&rsquo;t playing in the best spirits, we continued to play fairly and focus on our game plan and how we
+    want to play. I called it out after the game but wanted to make sure I call it out again, how proud we were of the kids for maintaining their cool, not
+    getting sucked in by the opposition, and also for their resilience with a lot of kids coming off with injuries, bumps and bruises throughout the game, but
+    getting back out there to help their team.
+  </p>
+  <p>
+    Despite the challenging conditions, it was really pleasing to see the kids looking to find targets and taking the kicks to move the ball and maintain
+    possession, like we have been working on at training.
+  </p>
+  <p>
+    A huge thank you to our team officials who give up their time every week and to our parent helpers on the day, Dallas, Archer, Angus, Caleb, and Levi
+    F&rsquo;s families for helping to ensure our kids get to play and enjoy the game.
+  </p>
+  <p>It was great to sing the song as a team again, let&rsquo;s keep working as a team and keep our winning streak alive.</p>
   <p>Go Baysie!</p>
 </div>
 <div id="not-found" style="display: none">
