--- a/teams-u11m.html
+++ b/teams-u11m.html
@@ -58,5 +58,6 @@
     <li><a href="/u11m-match-report/?id=r04" rel="nofollow">Round 4 Match Report</a></li>
     <li><a href="/u11m-match-report/?id=r05" rel="nofollow">Round 5 Match Report</a></li>
     <li><a href="/u11m-match-report/?id=r06" rel="nofollow">Round 6 Match Report</a></li>
+    <li><a href="/u11m-match-report/?id=r07" rel="nofollow">Round 7 Match Report</a></li>
   </ul>
 </div>
