--- a/teams-u09m-match-report.html
+++ b/teams-u09m-match-report.html
@@ -7,6 +7,7 @@
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
+    else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -183,6 +184,24 @@
   </p>
   <p>Thank you to all our team officials and parent helpers for your ongoing support. Let's keep the momentum going and continue to build on our progress.</p>
   <p>See you all back on the track this Friday!</p>
+</div>
+<div id="r08" style="display: none">
+  <h3>Round 8</h3>
+  <p>
+    This week, we bring you a special post-match interview with our goal-scoring champion Patrick and one of our Culture Champs, Johnny! Their insights will
+    highlight the excitement of this round, but let's note a few key moments.
+  </p>
+  <p>
+    It was a great taste of full-ground footy for our youngsters this morning against a strong Lysterfield outfit. This was our first chance to play as one full
+    team, providing an excellent opportunity to showcase our ball movement. Max, Xavier, and Phoenix linked up well through the middle, while Declan and Frankie
+    found great marking targets in Randall and Jack. Cohen had an absolute blinder today and should be proud of his hard work this season, which is truly
+    showing on Sundays.
+  </p>
+  <p>
+    I look forward to seeing you all tonight at our second Match Round-Up for the year, where I will share plenty of other great moments from today and the past
+    four rounds!
+  </p>
+  <p>Cheers</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
