--- a/teams-u13b-match-report.html
+++ b/teams-u13b-match-report.html
@@ -7,6 +7,7 @@
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
+    else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -186,6 +187,45 @@
     We as coaches only ask for you boys to compete and today we had 18 competitors on the ground. Can't ask for any more than that. All and all when you boys
     are switched on and playing beautiful football you are very hard to beat. We love watching this team grow so much this year, keep it up lads!&nbsp;
   </p>
+</div>
+<div id="r08" style="display: none">
+  <h3>Round 8</h3>
+  <p>
+    Hi Baysie family,&nbsp;<br />Today we played upper gully. The boys' attitude before the game seemed that they had already notched this game up as a win. So
+    once we got them focused on the task at hand they really switched on. We started the game with a moderate mid field, putting Charlie Dinnage in the middle
+    proved a good move, strong forward line and strong backline. I asked the boys to score 3 goals in the first quarter and they got 7 coming out of the blocks,
+    the best I've seen yet. The team work was amazing, the talk on the field was great and the boys spirits were high.
+  </p>
+  <p>
+    Going into the second quarter we had a comfortable lead, so I moved the magnets around again playing players out of their comfort zone. As stated last night
+    at round up this is a coaches dream come true, to be able to move players all over the ground at any time is such a delight, and it helps the boys grow in
+    their confidence. The boys played away and put another 4 goals on the board, maintaining our lead. Again the teamwork talk and 1% club were at its best this
+    quarter, the boys really have benefited from the 3 man weave, moving the ball quickly and consistently, the link up football has become a great thing to
+    watch.<br />&nbsp;<br />Heading into the 3rd quarter we had a dominant lead of 50 points, so again we now moved most of the back line forward and vice
+    versa. We put some of our players in the middle who haven't really had time on the ball this year, again this is to get kids into the action and help grow
+    confidence and respect for our great game. By the end of the 3rd quarter we had a commanding lead of 70 points, again the link up play the fluidity of the
+    boys hitting targets making space really is paying dividends.&nbsp;
+  </p>
+  <p>
+    In the 4th quarter I told the boys to go out and have fun. I put Lachy in the ruck with Ben, Austin and Nolan in the middle with him. It's the little things
+    that make up a team game, and these boys did their best. Ben got a small tap on to another player which then opened the door for a more penetrative kick
+    into our forward line resulting in a goal. These little but massive things happened all day. Jaxson was another in the last quarter who put himself on the
+    line and attacked the ball and it spilt our way, resulting in a goal.&nbsp;
+  </p>
+  <p>
+    Boys my only gripe is our structure goes to hell when we are winning, too many boys chasing goals and kicks within our forward 50 mtr. The more we focus on
+    our strengths and structure during the games the more repeat inside 50's we get offering more chances on goal.&nbsp;
+  </p>
+  <p>
+    We had multiple goal kickers throughout the day Kirby kicking a PB 4 goals in the game, but I think we missed one mate cause according to stat's you got 3
+    so sorry Kirby. Cooper Lancaster, opened his account in the last quarter kicking 3 goals, and the one I missed was Tom's ripper from the point post.
+    According to sources just a straight drop punt sailed through the big sticks.&nbsp;
+  </p>
+  <p>
+    Awards went to Kirby, Charles, Ben and Austin for this round, and our player of the rounds was Dusty, his commitment to the team game is really coming along
+    and it's great to see his focus and determination to get better for himself and his team mates.&nbsp;
+  </p>
+  <p>Good luck boys stay focused and let's start preparing for next week.</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
