--- a/teams-u16g-match-report.html
+++ b/teams-u16g-match-report.html
@@ -7,6 +7,7 @@
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
+    else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -143,6 +144,32 @@
   </p>
   <p>Goals. Haylee 2, Shaylee.</p>
   <p>Best. Milly, Chloe, Haylee, Ella, Keely, Tiarnah, Jade, Shelby, Shaylee</p>
+</div>
+<div id="r08" style="display: none">
+  <h3>Round 8</h3>
+  <p>
+    Today was a big game for our team. We were playing Waverley Blues at home and we had heard they were a pretty quick team so we needed to be on the ball.
+  </p>
+  <p>
+    We also had our captain Matilda playing her 100th game so that was exciting for the playing group but gave us a little more reason to play well and
+    hopefully get the win.
+  </p>
+  <p>
+    The game started how most games do. Both teams were full of energy and showed a lot of eagerness to get the ball. It was pretty even for most of the quarter
+    but there were times we had a bit more of the ball which helped us get an early lead at quarter time. The second quarter was pretty similar but it seemed
+    like there was a scoring end and Waverly was kicking to that end so they caught back our lead to be even at half time.
+  </p>
+  <p>The third quarter was very even again but we had the scoring end so we were able to get a 2 goal lead by three quarter time.</p>
+  <p>
+    We needed to dig deep and the last quarter to try and hold onto our lead. We didn&rsquo;t start the last quarter very well at all. We seemed to lose our
+    concentration for a bit so we weren&rsquo;t picking up our players or attacking the ball how we should so Waverley had a lot of the ball for the first part
+    of the last quarter. A little lucky for us that they missed a couple of shots for goal so we stayed in front. Once we switched back on, we got back to doing
+    what we needed to do and managed to kick a couple of goals making sure we won the game. We won 47-33.
+  </p>
+  <p>We had a lot of girls step up today which really made a difference for our team.</p>
+  <p>One of our best team efforts this year so far.</p>
+  <p>Goals. Haylee 3, Shaylee 2, Milly, Tiarnah.</p>
+  <p>Best. Carly, Milly, Jade, Keely, Lara, Matilda, Haylee, Shaylee, Chloe, Tiarnah</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
