--- a/teams-u14g-match-report.html
+++ b/teams-u14g-match-report.html
@@ -7,6 +7,7 @@
     else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
+    else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -246,6 +247,38 @@
     This squad has a never say die attitude, respect for each other and has each other&rsquo;s back. This was truly a team effort and the way the girls came
     together as a team today was memorable.
   </p>
+</div>
+<div id="r08" style="display: none">
+  <h3>Round 8</h3>
+  <p>The sun was out but it was a cold day that saw Ella lead the team out to our home game.</p>
+  <p>Grace Howard, recruited from our Pizza night, made her debut.</p>
+  <p>
+    We started off well scoring the first couple of points, unlucky not to start with goals. Unfortunately, we soon lost our way with players losing their
+    position and leaving unmarked players to score easily and take the lead.
+  </p>
+  <p>
+    We found ourselves in injury trouble with Lexie, Shayla, Gemma, Ruby and Gypsy all sustaining a knock or exacerbating an existing niggle. Lily, out of the
+    game nursing that shoulder. Thankfully we had Mackenzie, Tigerlily, and Grace B on loan from the under 12&rsquo;s to help bolster our bench.
+  </p>
+  <p>
+    Tori, in only her second game, again stood out with her tremendous efforts. Scoring her first goal and working so hard that not even her boots could handle
+    the intensity!
+  </p>
+  <p>
+    Jess and Fenix had standout games in the centre. Ella and Raelene played their roles well and again held their own in trying circumstances. Clara the quiet
+    achiever did incredibly well and her subtle touches were fantastic to see.
+  </p>
+  <p>Lexie, again commanding the respect of all on the ground with her strong presence out in the centre.</p>
+  <p>
+    It was during this adjustment period that we further lost our way and found ourselves up against it to come back. On the scoreboard we had as many scoring
+    shots as they did but they were more accurate than us. But that is the nature of the beast.
+  </p>
+  <p>
+    All in all, today was a disappointing result, but it was not out on the ground that the biggest lapses occurred. This was a defeat that as coach, I will
+    need to accept responsibility for. I was not clear in explaining what I wanted the team to do out in the field. And without a clearly laid out game plan,
+    this is the result we would expect. I will take this knock as a learning opportunity in my coaching journey.
+  </p>
+  <p>This group has every quality that makes a great team, and I will continue to work on capturing and bringing this out.</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
